--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
 				<li><a href="#">Red Lotus</a></li>
 			</ul>
 		</li>
+        <li><a href="#">null</a>
+            <ul>
+                <li><a href="#">null</a></li>
+                <li><a href="#">null</a></li>
+                <li><a href="#">null</a></li>
+            </ul>
+        </li>
 	</ul>
 </nav>
 	
@@ -35,17 +42,17 @@
 
             <div class="mySlides fade">
                 <img src="img/logo_trans.png" width="100%">
-                <div class="text">Markaz </div>
+                <div class="text">Markaz Maxima</div>
             </div>
 
             <div class="mySlides fade">
                 <img src="img/logo_trans.png" width="100%">
-                <div class="text">Summoners War</div>
+                <div class="text">Diana Alexander</div>
             </div>
 
             <div class="mySlides fade">
                 <img src="img/logo_trans.png" width="100%">
-                <div class="text">Honkai Impact 3rd</div>
+                <div class="text">Dr. Eric</div>
             </div>
 
         </div>
