--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<li><a href="index.html">Home</a></li>
 		<li><a href="#">Characters</a>
 			<ul>
-                <li><a href="markaz maxima.html">Markaz Maxima</a></li>
+                <li><a href="#">Markaz Maxima</a></li>
 				<li><a href="#">Diana Alexander</a></li>
-				<li><a href="#">Sarah</a></li>
+				<li><a href="#">Dr. Eric</a></li>
 				<li><a href="#">Red Lotus</a></li>
 			</ul>
 		</li>
@@ -38,7 +38,7 @@
 	<div id="main_center">
         <p style="text-align:center;font-size:20px;margin-bottom:25px">Characters</p>
 
-		<div class="slideshow-container">
+		<div class="charSlideCont">
 
             <div class="mySlides fade">
                 <img src="img/logo_trans.png" width="100%">
