--- a/index.html
+++ b/index.html
@@ -1,117 +1,188 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Quanta: Main Terminal</title>
-	<link href="css/index.css" rel="stylesheet" type="text/css">
+<meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
+	<title>Quanta: Main Terminal</title>
+	<link href="css/new index.css" rel="stylesheet" type="text/css">
+<title>index</title>
 </head>
 
 <body>
-	
-<header>
-    <a href="index.html"><img src="img/logo_trans.png" style="border:3px solid green; width:250px; display: block">
-    </a>
-</header>
-
-<nav>
-	<ul>
-		<li><a href="index.html">Home</a></li>
-		<li><a href="#">Characters</a>
-			<ul>
-                <li><a href="#">Markaz Maxima</a></li>
-				<li><a href="#">Diana Alexander</a></li>
-				<li><a href="#">Dr. Eric</a></li>
-				<li><a href="#">Red Lotus</a></li>
-			</ul>
-		</li>
-        <li><a href="#">null</a>
-            <ul>
-                <li><a href="#">null</a></li>
-                <li><a href="#">null</a></li>
-                <li><a href="#">null</a></li>
-            </ul>
-        </li>
-	</ul>
-</nav>
-	
-<main>
-	<div id="main_center">
-        <p style="text-align:center;font-size:20px;margin-bottom:25px">Characters</p>
-
-		<div class="charSlideCont">
-
-            <div class="mySlides fade">
-                <img src="img/logo_trans.png" width="100%">
-                <div class="text">Markaz Maxima</div>
-            </div>
-
-            <div class="mySlides fade">
-                <img src="img/logo_trans.png" width="100%">
-                <div class="text">Diana Alexander</div>
-            </div>
-
-            <div class="mySlides fade">
-                <img src="img/logo_trans.png" width="100%">
-                <div class="text">Dr. Eric</div>
-            </div>
-
-        </div>
-
-        <br>
-
-        <div style="text-align:center">
-            <span class="dot"></span> 
-            <span class="dot"></span> 
-            <span class="dot"></span> 
-        </div>
-
-        <script>
-            var slideIndex = 0;
-            showSlides();
-
-            function showSlides() {
-            var i;
-            var slides = document.getElementsByClassName("mySlides");
-            var dots = document.getElementsByClassName("dot");
-            for (i = 0; i < slides.length; i++) {
-              slides[i].style.display = "none";  
-            }
-            slideIndex++;
-            if (slideIndex > slides.length) {slideIndex = 1}    
-            for (i = 0; i < dots.length; i++) {
-              dots[i].className = dots[i].className.replace(" active", "");
-            }
-            slides[slideIndex-1].style.display = "block";  
-            dots[slideIndex-1].className += " active";
-            setTimeout(showSlides, 3000);
-            }
-        </script>
+	<!--the mobile navigation-->
+	<div id="mobile-top-nav" class="mobile-top-nav">
 		
-		<p>&nbsp;
+		<div style="padding: 0px 10px">
+			<button id="open-parent-nav" class="parent-nav" style="display: block" onClick="openNav()">&#9776;</button>
+			<button id="close-parent-nav" class="parent-nav" style="display: none; color: grey" onClick="closeNav()">&#9932;</button>
+		</div>
+		<div id="nav-hold" class="nav-hold">
+			<div>
+				<button class="child-nav" style="color: grey" disabled>Home</button>
+			</div>
+			<div>
+				<button id="open-chr-nav" class="child-nav" style="display: block" onClick="openChr()">Characters</button>
+				<button id="close-chr-nav" class="child-nav" style="display: none; color: grey" onClick="closeChr()">Characters</button>
+			</div>
+				<div id="chr-hold" class="item-hold">
+					<div class="item-nav"><a href="#">Markaz Maxima</a></div>
+					<div class="item-nav"><a href="#">Diana Alexander</a></div>
+					<div class="item-nav"><a href="#">Godric Ericson</a></div>
+				</div>
+			<div>
+				<button id="open-misc-nav" class="child-nav" style="display: block" onClick="openMisc()">Misc.</button>
+				<button id="close-misc-nav" class="child-nav" style="display: none; color: grey" onClick="closeMisc()">Misc.</button>
+			</div>
+				<div id="misc-hold" class="item-hold">
+					<div class="item-nav"><a href="#">Arknights</a></div>
+				</div>
+			<div></div>
+		</div>
+		
+	</div>
+	
+	<!--the desktop navigation-->
+	<div id="d-top-nav" class="d-top-nav">
+		
+		
+	</div>
+	
+	<!--image-->
+	<div class="mobile-logo">
+		<img src="img/logo_trans.png" height="200px">
+	</div>
+	
+	<div class="desktop-logo">
+		<img src="img/logo_trans.png" height="400px">
+	</div>
+	
+	<!--the notice-->
+	<div class="notice">
+		
+		<p>
             <br />
             <h1><b>Markaz Maxima</b></h1>
             <br />
             <br />
-            <div class="para" style="font-size:20px">Heyo</div>
+            <div>Heyo&nbsp;</div>
             <br />
-            <div class="para" style="font-size:20px">
-                <p>
-                    This site is still in development, all template come from my unpolish college project.
-                </p>
-                    <br /><br />
-                <p>
-                    In this terminal, you will notice a lot of boxes wrapping content around the site.
-
-                </p>
-                <p>
-                    This is nessesary for development troubleshooting and polishing that in progress, right now
-                </p>
+            <div>
+                <p>This site is still in development, all template come from my unpolish college project.</p>
+                    <br />
+                <p>In this terminal, you will notice a lot of boxes wrapping content around the site.</p>
+                <p>This is nessesary for development troubleshooting and polishing that in progress, right now</p>
             </div>
 		</p>
 	</div>
-</main>
-<footer id="footer">2021 Quanta
-    <br><br>
-</footer>
+	
+	<!--void-->
+	<div style="height: 50px"></div>
+	
+	<!--reveal footer-->
+	<div>
+		<button id="open-footer" class="ext-foot" style="display: block; bottom: 0px" onClick="openFoot()">About &and;</button>
+		<button id="close-footer" class="ext-foot" style="display: none; bottom: 30px" onClick="closeFoot()">About &or;</button>
+	</div>
+	
+	<!--the scripts-->
+	<script>
+		
+		<!--open mobile navigation parent-->
+		function openNav() {
+			var expNav = document.getElementById("nav-hold");
+			var behav = document.getElementById("mobile-top-nav");
+			var openExt = document.getElementById("open-parent-nav");
+			var closeExt = document.getElementById("close-parent-nav");
+			
+			expNav.style.display = "block";
+			behav.style.borderRadius = "25px 25px 25px 0px";
+			openExt.style.display = "none";
+			closeExt.style.display = "block";
+		}
+		
+		<!--close mobile navigation parent-->
+		function closeNav() {
+			var expNav = document.getElementById("nav-hold");
+			var behav = document.getElementById("mobile-top-nav");
+			var openExt = document.getElementById("open-parent-nav");
+			var closeExt = document.getElementById("close-parent-nav");
+			
+			expNav.style.display = "none";
+			behav.style.borderRadius = "25px";
+			openExt.style.display = "block";
+			closeExt.style.display = "none";
+		}
+		
+		<!--open child characters-->
+		function openChr() {
+			var expNav = document.getElementById("chr-hold");
+			var openExt = document.getElementById("open-chr-nav");
+			var closeExt = document.getElementById("close-chr-nav");
+			
+			expNav.style.display = "block";
+			openExt.style.display = "none";
+			closeExt.style.display = "block";
+		}
+		
+		<!--close child characters-->
+		function closeChr() {
+			var expNav = document.getElementById("chr-hold");
+			var openExt = document.getElementById("open-chr-nav");
+			var closeExt = document.getElementById("close-chr-nav");
+			
+			expNav.style.display = "none";
+			openExt.style.display = "block";
+			closeExt.style.display = "none";
+		}
+		
+		<!--open misc-->
+		function openMisc() {
+			var expNav = document.getElementById("misc-hold")
+			var openExt = document.getElementById("open-misc-nav");
+			var closeExt = document.getElementById("close-misc-nav");
+			
+			expNav.style.display = "block";
+			openExt.style.display = "none";
+			closeExt.style.display = "block";
+		}
+		
+		<!--close misc-->
+		function closeMisc() {
+			var expNav = document.getElementById("misc-hold")
+			var openExt = document.getElementById("open-misc-nav");
+			var closeExt = document.getElementById("close-misc-nav");
+			
+			expNav.style.display = "none";
+			openExt.style.display = "block";
+			closeExt.style.display = "none";
+		}
+		
+		<!--open footer-->
+		function openFoot() {
+			var expNav = document.getElementById("footer")
+			var openExt = document.getElementById("open-footer");
+			var closeExt = document.getElementById("close-footer");
+			
+			expNav.style.height = "60px";
+			openExt.style.display = "none";
+			closeExt.style.display = "block";
+		}
+		
+		<!--close footer-->
+		function closeFoot() {
+			var expNav = document.getElementById("footer")
+			var openExt = document.getElementById("open-footer");
+			var closeExt = document.getElementById("close-footer");
+			
+			expNav.style.height = "0";
+			openExt.style.display = "block";
+			closeExt.style.display = "none";
+		}
+			
+	</script>
+	
+	
 </body>
+
+<footer id="footer"><br>2021-2022 Quanta<br><br></footer>
+
 </html>
