hot fixe new look

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1">
 	<title>Quanta: Main Terminal</title>
-	<link href="css/new index.css" rel="stylesheet" type="text/css">
+	<link href="css/index.css" rel="stylesheet" type="text/css">
 <title>index</title>
 </head>
 
