--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
 	<fieldset>
 			<legend>Know Issues</legend>
 			<p>&rsaquo; changing resolution from mobile resolution to desktop resolution after using navigation system may break the current page navigation, reload page to solve the issue.</p>
+		<p>mobile navigation may not working in some site, for now...</p>
 	</fieldset>
 	</div>
 	
