--- a/akIndex.html
+++ b/akIndex.html
@@ -17,9 +17,9 @@
 	<div class="void"></div>
 	
 	<!--the top navigation-->
-	<nav class="top-nav">
+	<nav id="top-nav" class="top-nav">
 		<button id="m-nav" class="m-nav" type="button" value="0" onClick="mNav()">&#9776</button>
-		<ul>
+		<ul id="unordered-list">
 			<li><a href="akIndex.html">Home</a></li>
 			<li><a href="#">The PVs</a>
 				<ul>
@@ -39,14 +39,19 @@
 					<li><a href="index.html">Main Terminal</a></li>
 				</ul>
 			</li>
-			<li><a href="#">About</a></li>
+			<li><a href="about.html">About</a></li>
 		</ul>
 	</nav>
 	
 	<div class="top-logo">
-	<picture>
-		<img src="img/arknightsLogo.png" style="height: 200px">
-	</picture>
+		<picture>
+			<img src="img/arknightsLogo.png" style="height: 200px">
+		</picture>
+	</div>
+	<div class="m-top-logo">
+		<picture>
+			<img src="img/arknightsLogo.png" style="height: 100px">
+		</picture>
 	</div>
 	
 	<!--the sub navigation-->
