--- a/about.html
+++ b/about.html
@@ -96,8 +96,7 @@
 	<div>
 		<fieldset>
 			<legend>Current Know Issues</legend>
-			<p>&rsaquo; changing resolution from mobile resolution to desktop resolution after using navigation system may break the current page navigation, reload page to solve the issue.</p>
-			<p>&rsaquo; mobile navigation may not working in some site, for now...</p>
+			<p>&rsaquo; nothing as of now...</p>
 		</fieldset>
 	</div>
 	
