--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 	
 		<fieldset>
 			<legend>Site News</legend>
-			<p>v0.0.3 (29 January 2022)</p>
+			<p>v0.0.4 (31 January 2022)</p>
 			</br>
-			<p>&rsaquo; three page for [Other project: Arknights - subpages] have been added, but no content yet.</p>
-			<p>&rsaquo; new navigation system for mobile user (max-width: 600px).</p>
-			<p>&rsaquo; Arknights index page got new button.</p>
-			<p>&rsaquo; new css file for mobile user.</p>
+			<p>&rsaquo; patch in the problem with navigation system in [Arknights - subpages].</p>
+			<p>&rsaquo; added [About] page for detailed information.</p>
+			<p>&rsaquo; smooth out the navigation bar transition between [Desktop], [Tablet] and [Mobile] resolution.</p>
+			<p>&rsaquo; fix up various element resolution through out the site. now they look nicer for mobile and tablet user.</p>
 			</br>
 			<p>&rsaquo; read more infomation in detail at [About] page.</p>
 			</br>
@@ -84,8 +84,7 @@
 	
 		<fieldset>
 			<legend>Know Issues</legend>
-			<p>&rsaquo; changing resolution from mobile resolution to desktop resolution after using navigation system may break the current page navigation, reload page to solve the issue.</p>
-			<p>&rsaquo; </p>
+			<p>&rsaquo; nothing as of now...</p>
 		</fieldset>
 	</div>
 	
