--- a/arknights/arknightsPVsPost.html
+++ b/arknights/arknightsPVsPost.html
@@ -21,7 +21,7 @@
 	<!--the top navigation-->
 	<nav id="top-nav">
 		<ul>
-			<li><a href="arknightsIndex.html">Home</a></li>
+			<li><a href="../arknightsIndex.html">Home</a></li>
 			<li><a href="#">The PVs</a>
 				<ul>
 					<li><a href="arknightsPVsPost.html">Post-launch</a></li>
@@ -43,7 +43,7 @@
 			<li><a href="#">Other</a>
 				<ul>
 					<li><a href="about.html">About (terminal)</a></li>
-					<li><a href="arknights/setting.html">Setting</a></li>
+					<li><a href="setting.html">Setting</a></li>
 				</ul>
 			</li>
 		</ul>
