--- a/arknightsIndex.html
+++ b/arknightsIndex.html
@@ -95,9 +95,9 @@
 	<div>
 		<fieldset>
 			<legend>The PVs</legend>
-			<a href="arknights/akPVsPost.html"><div class="sub-nav">Post-launch PVs</div></a>
-			<a href="arknights/akPVsPost1st.html"><div class="sub-nav">Post 1st year PVs</div></a>
-			<a href="arknights/akPVsPost2nd.html"><div class="sub-nav">Post 2nd year PVs</div></a>
+			<a href="arknights/arknightsPVsPost.html"><div class="sub-nav">Post-launch PVs</div></a>
+			<a href="arknights/#.html"><div class="sub-nav">Post 1st year PVs</div></a>
+			<a href="arknights/#.html"><div class="sub-nav">Post 2nd year PVs</div></a>
 		</fieldset>
 		
 		<fieldset>
