--- a/arknightsIndex.html
+++ b/arknightsIndex.html
@@ -9,7 +9,7 @@
 	<link rel="icon" type="image/png" href="img/favicon.png">
 	<link href="css/globalStyle.css" rel="stylesheet" type="text/css">
 	<link href="css/m.globalStyle.css" rel="stylesheet" type="text/css">
-	<link href="css/arknightsMainStyle.css" rel="stylesheet" type="text/css">
+	<link href="css/arknightsStyle.css" rel="stylesheet" type="text/css">
 </head>
 
 <body id="body">
