--- a/arknightsIndex.html
+++ b/arknightsIndex.html
@@ -24,8 +24,8 @@
 			<li><a href="#">The PVs</a>
 				<ul>
 					<li><a href="arknights/arknightsPVsPost.html">Post-launch</a></li>
-					<li><a href="arknightsPVsPost1st.html">1st anniversary</a></li>
-					<li><a href="arknightsPVsPost2nd.html">2nd anniversary</a></li>
+					<li><a href="#">1st anniversary</a></li>
+					<li><a href="#">2nd anniversary</a></li>
 				</ul>
 			</li>
 			<li><a href="#">The Musics (EPs)</a>
@@ -95,9 +95,9 @@
 	<div>
 		<fieldset>
 			<legend>The PVs</legend>
-			<a href="arknights/akPVsPost.html"><div class="sub-nav">Post-launch PVs</div></a>
-			<a href="arknights/akPVsPost1st.html"><div class="sub-nav">Post 1st year PVs</div></a>
-			<a href="arknights/akPVsPost2nd.html"><div class="sub-nav">Post 2nd year PVs</div></a>
+			<a href="arknights/arknightsPVsPost.html"><div class="sub-nav">Post-launch PVs</div></a>
+			<a href="#.html"><div class="sub-nav">Post 1st year PVs</div></a>
+			<a href="#.html"><div class="sub-nav">Post 2nd year PVs</div></a>
 		</fieldset>
 		
 		<fieldset>
