--- a/arknights/setting.html
+++ b/arknights/setting.html
@@ -24,8 +24,8 @@
 			<li><a href="#">The PVs</a>
 				<ul>
 					<li><a href="arknightsPVsPost.html">Post-launch</a></li>
-					<li><a href="arknightsPVsPost1st.html">1st anniversary</a></li>
-					<li><a href="arknightsPVsPost2nd.html">2nd anniversary</a></li>
+					<li><a href="#">1st anniversary</a></li>
+					<li><a href="#">2nd anniversary</a></li>
 				</ul>
 			</li>
 			<li><a href="#">The Musics (EPs)</a>
