--- a/arknightsIndex.html
+++ b/arknightsIndex.html
@@ -24,8 +24,8 @@
 			<li><a href="#">The PVs</a>
 				<ul>
 					<li><a href="arknights/arknightsPVsPost.html">Post-launch</a></li>
-					<li><a href="arknightsPVsPost1st.html">1st anniversary</a></li>
-					<li><a href="arknightsPVsPost2nd.html">2nd anniversary</a></li>
+					<li><a href="#">1st anniversary</a></li>
+					<li><a href="#">2nd anniversary</a></li>
 				</ul>
 			</li>
 			<li><a href="#">The Musics (EPs)</a>
@@ -96,14 +96,14 @@
 		<fieldset>
 			<legend>The PVs</legend>
 			<a href="arknights/arknightsPVsPost.html"><div class="sub-nav">Post-launch PVs</div></a>
-			<a href="arknights/#.html"><div class="sub-nav">Post 1st year PVs</div></a>
-			<a href="arknights/#.html"><div class="sub-nav">Post 2nd year PVs</div></a>
+			<a href="#"><div class="sub-nav">Post 1st year PVs</div></a>
+			<a href="#"><div class="sub-nav">Post 2nd year PVs</div></a>
 		</fieldset>
 		
 		<fieldset>
 			<legend>The Musics</legend>
-			<a href="3"><div class="sub-nav">Operators EPs</div></a>
-			<a href="3"><div class="sub-nav">Enemies Themes</div></a>
+			<a href="#"><div class="sub-nav">Operators EPs</div></a>
+			<a href="#"><div class="sub-nav">Enemies Themes</div></a>
 		</fieldset>
 	</div>
 		
