--- a/arknights/arknightsPVsPost.html
+++ b/arknights/arknightsPVsPost.html
@@ -37,12 +37,12 @@
 			</li>
 			<li><a href="#">Quanta:</a>
 				<ul>
-					<li><a href="index.html">Main Terminal</a></li>
+					<li><a href="../index.html">Main Terminal</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Other</a>
 				<ul>
-					<li><a href="about.html">About (terminal)</a></li>
+					<li><a href="../about.html">About (terminal)</a></li>
 					<li><a href="setting.html">Setting</a></li>
 				</ul>
 			</li>
