--- a/arknights/arknightsPVsPost.html
+++ b/arknights/arknightsPVsPost.html
@@ -414,7 +414,7 @@
 				
 				<button type="button" id="cont03" class="content-item" onClick="rerun01()">Grani and the Knight's Treasure
 					<div>
-						<div class="content-detail">Trailer</div>
+						<div class="content-detail">PV</div>
 						<div class="content-detail">Anime</div>
 					</div>
 				</button>
