--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 			</li>
 			<li><a href="#">Projects:</a>
 				<ul>
-					<li><a href="arknightsIndex.html">Arknights</a></li>
+					<li><a href="arknights/arknightsIndex.html">Arknights</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Other</a>
@@ -55,7 +55,7 @@
 			</li>
 			<li><a href="#">Projects:</a>
 				<ul>
-					<li><a href="arknightsIndex.html">Arknights</a></li>
+					<li><a href="arknights/arknightsIndex.html">Arknights</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Other</a>
@@ -89,7 +89,19 @@
 		</fieldset>
 
 		<fieldset class="patch-note-01">
-			<legend>Site Update</legend>
+			<legend>Site Update v0.1</legend>
+				<p>v0.1.0 (12 February 2022)</p>
+			</br>
+				<p>[Arknights]</p>
+			</br>
+				<p>&rsaquo; redo the playlist coding, now individual videos of individual playlist annual part can be view from the same page, reducing file count in website directory.</p>
+				<p>&rsaquo; added new [3D Animation] category in player page (1st year annual part doesn't have any 3d anime...).</p>
+				<p>&rsaquo; added exclamation mark for certain videos. RED = potential copyright, YELLOW = story spoiler and NONE = safe to watch.</p>
+				<p>&rsaquo; navigation bar was resized. now it always take the whole top browser, unless the max width meet.</p>
+				<p>&rsaquo; player page is now responsive for all device, global site min-width is 350px.</p>
+				<p>&rsaquo; the [all] filter actually show all relatable items, ALL OF IT.</p>
+				<p>&rsaquo; other miscellaneous change and fixed.</p>
+			</br></br>
 				<p>v0.0.5 (9 February 2022)</p>
 			</br>
 				<p>&rsaquo; added new [Dark Mode] setting. the dark mode is on by default and can be toggle in [Setting] page.</p>
