--- a/arknights/setting.html
+++ b/arknights/setting.html
@@ -18,17 +18,17 @@
 	
 	<!--the top navigation-->
 	<nav id="top-nav" class="top-nav">
-		<button id="m-nav" class="m-nav" type="button" value="0" onClick="mNav()">&#9776&nbsp;Setting</button>
+		<img src="img/arknightsLogo.png" style="height: 60px; float: left">
 		<ul id="unordered-list">
-			<li><a href="../arknightsIndex.html">Home</a></li>
-			<li><a href="#">The PVs</a>
+			<li><a href="arknightsIndex.html">Home</a></li>
+			<li><a href="#">Videos (PVs)</a>
 				<ul>
 					<li><a href="arknightsPVsPost.html">Post-launch</a></li>
 					<li><a href="#">1st anniversary</a></li>
 					<li><a href="#">2nd anniversary</a></li>
 				</ul>
 			</li>
-			<li><a href="#">The Musics (EPs)</a>
+			<li><a href="#">Musics (EPs)</a>
 				<ul>
 					<li><a href="#">Operator Themes</a></li>
 					<li><a href="#">Enemies Themes</a></li>
@@ -52,17 +52,17 @@
 	<nav id="top-nav-mobile">
 		<button id="m-nav" class="m-nav" type="button" value="0" onClick="mNav()">&#9776&nbsp;setting</button>
 		<ul id="mobile-ul">
-			<li><a href="../arknightsIndex.html">Home</a></li>
-			<li><a href="#">The PVs</a>
+			<li><a href="arknightsIndex.html">Home</a></li>
+			<li><a href="#">Videos (PVs)</a>
 				<ul>
 					<li><a href="arknightsPVsPost.html">Post-launch</a></li>
 					<li><a href="#">1st anniversary</a></li>
 					<li><a href="#">2nd anniversary</a></li>
 				</ul>
 			</li>
-			<li><a href="#">The Musics (EPs)</a>
+			<li><a href="#">Musics (EPs)</a>
 				<ul>
-					<li><a href="#">Operators Theme</a></li>
+					<li><a href="#">Operators Themes</a></li>
 					<li><a href="#">Enemies Themes</a></li>
 				</ul>
 			</li>
