--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			</li>
 			<li><a href="#">Projects:</a>
 				<ul>
-					<li><a href="arknightsIndex.html">Arknights</a></li>
+					<li><a href="arknights/arknightsIndex.html">Arknights</a></li>
 				</ul>
 			</li>
 			<li><a href="#">Other</a>
@@ -90,13 +90,17 @@
 		
 		<fieldset>
 			<legend>Site News</legend>
-			<p>v0.0.5 (9 February 2022)</p>
+			<p>v0.1.0 (12 February 2022)</p>
 			</br>
-				<p>&rsaquo; added new [Dark Mode] setting. the dark mode is on by default and can be toggle in [Setting] page.</p>
-				<p>&rsaquo; patch in the problem with navigation transition. now when user transitioning from wide to small width and/or vice versa, the navigation bar won't bug out.</p>
-				<p>&rsaquo; added content in [Arknights - subpages ( arknightsPVsPost ). however, for mobile user it impossible and annoying to navigate for the time.</p>
-				<p>&rsaquo; change a little bit of navigation items.</p>
-				<p>&rsaquo; more content for [Arknights - subpages] after this.</p>
+				<p>[Arknights]</p>
+			</br>
+				<p>&rsaquo; redo the playlist coding, now individual videos of individual playlist annual part can be view from the same page, reducing file count in website directory.</p>
+				<p>&rsaquo; added new [3D Animation] category in player page (1st year annual part doesn't have any 3d anime...).</p>
+				<p>&rsaquo; added exclamation mark for certain videos. RED = potential copyright, YELLOW = story spoiler and NONE = safe to watch.</p>
+				<p>&rsaquo; navigation bar was resized. now it always take the whole top browser, unless the max width meet.</p>
+				<p>&rsaquo; player page is now responsive for all device, global site min-width is 350px.</p>
+				<p>&rsaquo; the [all] filter actually show all relatable items, ALL OF IT.</p>
+				<p>&rsaquo; other miscellaneous change and fixed.</p>
 			</br>
 				<p>&rsaquo; read more infomation in detail at [About] page.</p>
 			</br>
